# fiber-c1

./: .gitignore  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  installer.nsh  installer.nsi  package-lock.json  package.json  vite.config.js
electron/: main.js  metrics.js  preload.js  store.js
reference/: BatchCameraManager.cs  config.ts  shader.ts
src/: App.css  App.jsx  SettingsPanel.css  SettingsPanel.jsx  api.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  metrics.rs  pipe.rs
src/components/: Atmosphere.jsx  DonutProgress.jsx  LenticularInterlacer.jsx  PercentLabel.jsx  cursorLightState.js  orbLightingConfig.js
src/i18n/: index.js
src/lenticular/: config.js
