[package]
name = "fiber-c1"
version = "0.0.0"
description = "Fiber C1 Lenticular Display Monitor"
authors = []
edition = "2021"

[lib]
name = "fiber_c1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "net", "sync"] }
sysinfo = "0.33"
arboard = { version = "3", default-features = false }
